--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,7 +11,7 @@
          syntaxCheck="false"
          bootstrap="vendor/autoload.php">
     <testsuites>
-        <testsuite name="xobotyi\phync Tests">
+        <testsuite name="xobotyi\rsync Tests">
             <directory>./tests</directory>
         </testsuite>
     </testsuites>
