composer.json fix; basics of readme;

--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,8 @@
   "type": "library",
   "keywords": [
     "php",
-    "beanstalk",
-    "beanstalkd",
-    "queue",
-    "client"
+    "rsync",
+    "resync-wrapper"
   ],
   "license": "MIT",
   "homepage": "https://github.com/xobotyi/rsync",
